# PetIBM

./: configure  configure.ac
src/: Makefile.am  Makefile.in
src/solvers/navierStokes/inline/: generateBNQ.inl
src/solvers/tairaColonius/inline/: initializeBodies.inl
src/utilities/: Body.cpp  Body.h  Makefile.am  Makefile.in
src/utilities/kinematics/: heaving.cpp  heaving.h  kinematics.h
tests/: Makefile.am
tests/regressiontests/: Makefile.am  Makefile.in
tests/regressiontests/navierStokesSolver/: Makefile.am  Makefile.in  test.cpp
tests/regressiontests/tairaColoniusSolver/: Makefile.am  Makefile.in  test.cpp
tests/unittests/: Makefile.am  Makefile.in
tests/unittests/cartesianMesh/: Makefile.am  Makefile.in  test.cpp
tests/unittests/convectiveTerms/: ConvectiveTerm.cpp  ConvectiveTerm.h  Makefile.am  Makefile.in  plotGridConvergence.py  test.cpp
tests/unittests/diffusiveTerms/: DiffusiveTerm.cpp  DiffusiveTerm.h  Makefile.am  Makefile.in  plotGridConvergence.py  test.cpp
